# project_autoracs

./: CMakeLists.txt  README.md
launch/: multi_robots_house.launch  multi_robots_rectangle.launch  multi_robots_v2.launch  multi_turtlebot3.launch  robot_rectangle_v3_world.launch  robot_rectangle_world.launch
map_launcher/map/: map.yaml  pillar10x10_2028.yaml  two_run_8_final.yaml  two_run_8_sample.yaml
materials/meshes/: ObeliskSet01_A.dae  ObeliskSet01_ALL.dae  ObeliskSet01_F.dae  ObeliskSet01_G.dae  rock_07.dae  rock_cone.dae  rock_cone2.dae  rock_square.dae
models/ocean/: model.config  model.sdf
models/rectangle/: model.config  model.sdf
models/terrain_lake/: model.config  model.sdf
models/turtlebot3_square/: model.sdf
models/water/: model.config  model.sdf
multi_nav/launch/: amcl_robot1.launch  amcl_robot2.launch  navigation.launch  (+4 more)
old_code_structure/: README.md  package.xml
old_code_structure/launch/: multi_robots.launch  multi_robots_square.launch
old_code_structure/map_launcher/map/: two_run_8_final.yaml  two_run_8_sample.yaml
old_code_structure/multi_nav/launch/: robots_multi_navigation.launch  robots_multi_static.launch
old_code_structure/multi_slam/launch/: robots_multi_map_merge.launch  robots_multi_moving.launch
old_code_structure/src/: turtlebot3_drive.cpp
project_autoracs/: package.xml
screen_shoot/: rectangle_v7_6robot_map_1203.pgm  rectangle_v7_6robot_map_1205.pgm  rectangle_v7_6robot_map_1207.pgm  rectangle_v7_6robot_map_1209.pgm
worlds/: rectangle.world  rectangle_v2.world  rectangle_v3.world  static_map_plugin.world
(+64 files in other folders)
