<?xml version="1.0"?>
<package format="2">
  <name>project_autoracs</name>
  <version>1.3.1</version>
  <description>
    Gazebo simulation package for the Project AutoRACS
  </description>
  <license>TBD</license>
  <maintainer email="123@abc.com">Project_AutoRACS</maintainer>
  <url type="repository">https://github.com/powlook/project_autoracs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
